@@ -4939,7 +4939,7 @@ genCall (const iCode *ic)
             {
               spillPair (PAIR_BC);
               emit2 ("ld a, !bankimmeds", name);
-              emit2 ("ld bc, %s", name);
+              emit2 ("ld bc, !hashedstr", name);
               emit2 ("call ___sdcc_bcall_abc");
               regalloc_dry_run_cost += 8;
             }
@@ -4948,7 +4948,7 @@ genCall (const iCode *ic)
               spillPair (PAIR_DE);
               spillPair (PAIR_HL);
               emit2 ("ld e, !bankimmeds", name);
-              emit2 ("ld hl, %s", name);
+              emit2 ("ld hl, !hashedstr", name);
               emit2 ("call ___sdcc_bcall_ehl");
               regalloc_dry_run_cost += 8;
             }
